--- a/src/scss/aside.scss
+++ b/src/scss/aside.scss
@@ -139,6 +139,7 @@
     &__photo {
         margin-bottom: 10px;
         img {
+            border-radius: 100%;
             width: 72px;
             height: 72px;
             object-fit: cover;
