Update drag drop

--- a/src/scss/entry-pages.scss
+++ b/src/scss/entry-pages.scss
@@ -511,7 +511,7 @@ input[name="conditions"]:checked +
             }
         }
     }
-    &__image {
+    &__file {
         img {
             width: 350px;
             height: 300px;
