--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -97,6 +97,7 @@
                 width: 100%;
             }
             @media (max-width: $mobileSmall) {
+                justify-content: normal;
                 padding-left: 25px;
             }
         }
